# ZKntSDK

./: .clang-format  .editorconfig  .envrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  flake.nix  vcpkg.json
.github/workflows/: build.yml
DirectInputProxy/: CMakeLists.txt
DirectInputProxy/Include/: D3DUtils.hpp  HostServices.hpp
DirectInputProxy/Src/: dllmain.cpp  loader.cpp  loader.hpp
DirectInputProxy/Src/Rendering/: D3D12DXGIFactory.cpp  D3D12DXGIFactory.hpp  D3D12Hooks.cpp  D3D12Hooks.hpp  D3D12SwapChain.cpp  D3D12SwapChain.hpp  ReloadGate.hpp  RenderingHost.cpp  RenderingHost.hpp  WndProcSubclass.cpp  WndProcSubclass.hpp
Mods/Cheats/Src/: Cheats.cpp  Cheats.hpp
Mods/FreeCam/Src/: FreeCam.cpp  FreeCam.hpp
Mods/NoPause/: CMakeLists.txt
Mods/NoPause/Src/: NoPause.cpp  NoPause.hpp
Mods/SkipIntro/: CMakeLists.txt
Mods/SkipIntro/Src/: SkipIntro.cpp  SkipIntro.hpp
ZKntSdk/: CMakeLists.txt
ZKntSdk/Include/: Common.hpp  Functions.hpp  Globals.hpp  Hook.hpp  Hooks.hpp  IDirectXTKRenderer.hpp  IImGuiRenderer.hpp  IModSDK.hpp  IPluginInterface.hpp  IRenderer.hpp  Logging.hpp
ZKntSdk/Include/Glacier/: MDF_FONT.h  TBinaryTree.hpp  TMap.hpp  TNonReallocatingArray.hpp  TObjectPool.hpp  TRedBlackTree.hpp  TRefCountPtr.hpp  TSharedPointer.hpp  ZCamera.hpp  ZCollision.hpp  ZEntity.hpp  ZFirearm.hpp  ZInfiniteBuffer.hpp  ZMath.hpp  ZMemory.hpp  ZModule.hpp  ZMutex.hpp  ZObjectPool.hpp  ZPlayer.hpp  ZRender.hpp  ZResource.hpp  ZSharedPointerTarget.hpp  (+3 more)
ZKntSdk/Src/: Entry.cpp  Failures.hpp  Functions.cpp  Globals.cpp  HookImpl.hpp  Hooks.cpp  Logging.cpp  ModLoader.cpp  ModLoader.hpp  ModSDK.cpp  ModSDK.hpp  ModSettings.cpp  ModSettings.hpp  ReloadGate.hpp  ResourceLoading.cpp
cmake/scripts/: fetch-xwin.sh
cmake/toolchains/: clang-cl.cmake
cmake/vcpkg-overlays/: x64-windows-static-cross.cmake  x64-windows-static.cmake
(+17 files in other folders)
